--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "better-auth": "^1.4.5",
+    "better-auth-cloudflare": "^0.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "drizzle-orm": "^0.44.7",
     "graphql": "^16.8.1",
     "lucide-react": "^0.555.0",
     "next": "15.4.7",
